# flexer-senior-bot-v2

./: .env.example  .gitignore  ACTIVITY_IMPLEMENTATION.md  AI_AGENT_GUIDE.md  CHANGELOG.md  DEVELOPMENT.md  DOCS_INDEX.md  DOCUMENTATION.md  DUTY_CONFIRMATION.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  backup.sh  docker-compose.yml  pyproject.toml  pytest.ini  restore.sh  run.sh  setup-ubuntu.sh  test_activity_functionality.py  test_bot_startup.py
.github/: copilot-instructions.md
src/: __init__.py  bot.py  config.py
src/database/: engine.py  models.py  repositories.py
src/handlers/: activity.py  duty.py  duty_callbacks.py  force_pick.py  help.py  history.py  join.py  leave.py  pick.py  pool.py  start.py  week_selection.py
src/keyboards/: __init__.py  week_selector.py
src/middlewares/: logging.py
src/services/: duty_manager.py  duty_selector.py  notification.py  user_manager.py
src/states/: __init__.py  activity.py
src/utils/: formatters.py  logger.py  validators.py
tests/: conftest.py
tests/integration/: test_handlers.py
tests/unit/: test_activity_command.py  test_activity_formatters.py  test_activity_parser.py  test_activity_security.py  test_duty_manager.py  test_repositories.py  test_user_manager.py  test_validators.py
