[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "flexer-senior-bot-v2"
version = "0.1.0"
description = "Telegram bot for managing duty rotation in groups"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Rinat Ganbarov", email = "rinat.ganbarov@gmail.com"}
]
keywords = ["telegram", "bot", "duty", "rotation"]

[project.urls]
Repository = "https://github.com/Rinta01/flexer-senior-bot-v2"

[project.dependencies]
aiogram = ">=3.24.0"
sqlalchemy = ">=2.0.23"
aiosqlite = ">=0.19.0"
alembic = ">=1.13.0"
pydantic = ">=2.5.0"
pydantic-settings = ">=2.1.0"
python-dotenv = ">=1.0.0"
apscheduler = ">=3.11.0"
python-json-logger = ">=2.0.7"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "black>=23.12.0",
    "aiosqlite>=0.19.0",
]
db = [
    "alembic>=1.13.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=src --cov-report=html --cov-report=term-missing"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py312"
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = ["E501"]  # Line too long

[tool.ruff.isort]
known-first-party = ["src"]

[tool.black]
line-length = 100
target-version = ["py312"]
